@@ -1,5 +1,10 @@
 2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-passphrase.c:
+    * libseahorse/seahorse-ssh-key.c: Fix compile warnings
+    
+2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-key.c:
     * libseahorse/seahorse-key.h:
     * libseahorse/seahorse-pgp-key.c:
